# 2023-SNU-Rust-CrossPlatform

./: .gitattributes  README.md
2 - Example/2 - Unified FFI/: Cargo.toml  build.rs
2 - Example/2 - Unified FFI/src/: calc.udl  lib.rs
2 - Example/2 - Unified FFI/src/uniffi/kotlin/: calc.kt
2 - Example/2 - Unified FFI/src/uniffi/swift/: calc.swift  calcFFI.h  calcFFI.modulemap
